--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,7 @@
       ],
       ___gcfg = {
         parsetags: 'explicit'
-      },
-      gp = function () {};
+      };
 
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -44,8 +43,8 @@
         <div class="avatar"></div>
         <h1><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><span itemprop="givenName">Attila</span> <span itemprop="familyName">Ol&aacute;h</span></span></a></h1>
         <h2>Full-time dad, part-time web developer.</h2>
-        <h2 class="live" itemprop="address">Lives in
-          <span itemscope itemtype="http://data-vocabulary.org/PostalAddress">
+        <h2 class="live">Lives in
+          <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/PostalAddress">
             <a href="https://en.wikipedia.org/wiki/Bajmok" itemprop="addressLocality">Bajmok</a>,
             <a href="https://en.wikipedia.org/wiki/Serbia" itemprop="addressCountry">Serbia</a>.
             <meta itemprop="email" content="attilaolah@gmail.com">
@@ -54,8 +53,8 @@
             <meta itemprop="postalCode" content="24210">
           </span>
         </h2>
-        <h2 class="work" itemprop="affiliation">Works at
-          <span itemscope itemtype="http://data-vocabulary.org/PostalAddress">
+        <h2 class="work">Works at
+          <span itemprop="affiliation" itemscope itemtype="http://data-vocabulary.org/PostalAddress">
             <a href="http://www.vemble.com/" itemprop="url">Vemble</a>.
             <meta itemprop="logo" content="http://www.vemble.com/resources/img/logo.png">
           </span>
