--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,11 +2,12 @@
 <html lang="en-gb" itemscope itemtype="http://www.schema.org/Blog">
 <head>
   <meta charset="utf-8">
-  <meta charset="utf-8"/>
   <title>{{ page.title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml">
+  <link rel="alternate" type="application/atom+xml" title="Atom feed" href="/atom.xml">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript">
 
     var _gaq = [
