--- a/_layouts/sitemap.html
+++ b/_layouts/sitemap.html
@@ -6,20 +6,19 @@
     http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
   <url>
     <loc>http://attilaolah.eu/</loc>
+    <lastmod>{{ site.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>daily</changefreq>
-    <priority>1.00</priority>
   </url>
   <url>
     <loc>http://attilaolah.eu/archive/</loc>
+    <lastmod>{{ site.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>daily</changefreq>
-    <priority>0.800</priority>
   </url>
 {% for post in site.posts %}
   <url>
     <loc>http://attilaolah.eu{{ post.url }}</loc>
-    <lastmod>{{ post.date | date:"%Y-%m-%d" }}</lastmod>
+    <lastmod>{{ post.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>monthly</changefreq>
-    <priority>0.80</priority>
   </url>
 {% endfor %}
 </urlset>
