--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/jpeg" href="/favicon.jpg">
   <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml">
   <link rel="alternate" type="application/atom+xml" title="Atom feed" href="/atom.xml">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript">
-
     var _gaq = [
         ['_setAccount', 'UA-13035482-4'],
         ['_trackPageview']
@@ -17,7 +16,6 @@
       ___gcfg = {
         parsetags: 'explicit'
       };
-
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
