--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,13 @@
     display: none;
   }
 }
+.markdown {
+  /*
+  * Syntax highlighting.
+  * Generated using 'pygmentize -S colorful -f html'.
+  */
+
+}
 .markdown a,
 .markdown a:visited {
   color: #4183c4;
@@ -60,11 +67,365 @@
 .markdown a:active {
   color: #333;
 }
+.markdown em {
+  color: #000;
+}
+.markdown pre {
+  padding: 5px;
+}
+.markdown code {
+  white-space: nowrap;
+  padding: .0625rem .3125rem;
+}
+.markdown pre,
 .markdown code {
   background: #eee;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-  white-space: nowrap;
-  padding: .0625rem .3125rem;
+}
+.markdown pre,
+.markdown pre > code {
+  background: #eee;
+  white-space: pre;
+}
+.markdown pre > code {
+  padding: 0;
+}
+.markdown pre > code {
+  /* Comment */
+
+  /* Error */
+
+  /* Keyword */
+
+  /* Operator */
+
+  /* Comment.Multiline */
+
+  /* Comment.Preproc */
+
+  /* Comment.Single */
+
+  /* Comment.Special */
+
+  /* Generic.Deleted */
+
+  /* Generic.Emph */
+
+  /* Generic.Error */
+
+  /* Generic.Heading */
+
+  /* Generic.Inserted */
+
+  /* Generic.Output */
+
+  /* Generic.Prompt */
+
+  /* Generic.Strong */
+
+  /* Generic.Subheading */
+
+  /* Generic.Traceback */
+
+  /* Keyword.Constant */
+
+  /* Keyword.Declaration */
+
+  /* Keyword.Namespace */
+
+  /* Keyword.Pseudo */
+
+  /* Keyword.Reserved */
+
+  /* Keyword.Type */
+
+  /* Literal.Number */
+
+  /* Literal.String */
+
+  /* Name.Attribute */
+
+  /* Name.Builtin */
+
+  /* Name.Class */
+
+  /* Name.Constant */
+
+  /* Name.Decorator */
+
+  /* Name.Entity */
+
+  /* Name.Exception */
+
+  /* Name.Function */
+
+  /* Name.Label */
+
+  /* Name.Namespace */
+
+  /* Name.Tag */
+
+  /* Name.Variable */
+
+  /* Operator.Word */
+
+  /* Text.Whitespace */
+
+  /* Literal.Number.Float */
+
+  /* Literal.Number.Hex */
+
+  /* Literal.Number.Integer */
+
+  /* Literal.Number.Oct */
+
+  /* Literal.String.Backtick */
+
+  /* Literal.String.Char */
+
+  /* Literal.String.Doc */
+
+  /* Literal.String.Double */
+
+  /* Literal.String.Escape */
+
+  /* Literal.String.Heredoc */
+
+  /* Literal.String.Interpol */
+
+  /* Literal.String.Other */
+
+  /* Literal.String.Regex */
+
+  /* Literal.String.Single */
+
+  /* Literal.String.Symbol */
+
+  /* Name.Builtin.Pseudo */
+
+  /* Name.Variable.Class */
+
+  /* Name.Variable.Global */
+
+  /* Name.Variable.Instance */
+
+  /* Literal.Number.Integer.Long */
+
+}
+.markdown pre > code .hll {
+  background-color: #ffffcc;
+}
+.markdown pre > code .c {
+  color: #808080;
+}
+.markdown pre > code .err {
+  color: #F00000;
+  background-color: #f0a0a0;
+}
+.markdown pre > code .k {
+  color: #008000;
+  font-weight: bold;
+}
+.markdown pre > code .o {
+  color: #303030;
+}
+.markdown pre > code .cm {
+  color: #808080;
+}
+.markdown pre > code .cp {
+  color: #507090;
+}
+.markdown pre > code .c1 {
+  color: #808080;
+}
+.markdown pre > code .cs {
+  color: #cc0000;
+  font-weight: bold;
+}
+.markdown pre > code .gd {
+  color: #a00000;
+}
+.markdown pre > code .ge {
+  font-style: italic;
+}
+.markdown pre > code .gr {
+  color: #ff0000;
+}
+.markdown pre > code .gh {
+  color: #000080;
+  font-weight: bold;
+}
+.markdown pre > code .gi {
+  color: #00a000;
+}
+.markdown pre > code .go {
+  color: #808080;
+}
+.markdown pre > code .gp {
+  color: #c65d09;
+  font-weight: bold;
+}
+.markdown pre > code .gs {
+  font-weight: bold;
+}
+.markdown pre > code .gu {
+  color: #800080;
+  font-weight: bold;
+}
+.markdown pre > code .gt {
+  color: #0040d0;
+}
+.markdown pre > code .kc {
+  color: #008000;
+  font-weight: bold;
+}
+.markdown pre > code .kd {
+  color: #008000;
+  font-weight: bold;
+}
+.markdown pre > code .kn {
+  color: #008000;
+  font-weight: bold;
+}
+.markdown pre > code .kp {
+  color: #003080;
+  font-weight: bold;
+}
+.markdown pre > code .kr {
+  color: #008000;
+  font-weight: bold;
+}
+.markdown pre > code .kt {
+  color: #303090;
+  font-weight: bold;
+}
+.markdown pre > code .m {
+  color: #6000E0;
+  font-weight: bold;
+}
+.markdown pre > code .s {
+  background-color: #fff0f0;
+}
+.markdown pre > code .na {
+  color: #0000c0;
+}
+.markdown pre > code .nb {
+  color: #007020;
+}
+.markdown pre > code .nc {
+  color: #B00060;
+  font-weight: bold;
+}
+.markdown pre > code .no {
+  color: #003060;
+  font-weight: bold;
+}
+.markdown pre > code .nd {
+  color: #505050;
+  font-weight: bold;
+}
+.markdown pre > code .ni {
+  color: #800000;
+  font-weight: bold;
+}
+.markdown pre > code .ne {
+  color: #F00000;
+  font-weight: bold;
+}
+.markdown pre > code .nf {
+  color: #0060B0;
+  font-weight: bold;
+}
+.markdown pre > code .nl {
+  color: #907000;
+  font-weight: bold;
+}
+.markdown pre > code .nn {
+  color: #0e84b5;
+  font-weight: bold;
+}
+.markdown pre > code .nt {
+  color: #007000;
+}
+.markdown pre > code .nv {
+  color: #906030;
+}
+.markdown pre > code .ow {
+  color: #000000;
+  font-weight: bold;
+}
+.markdown pre > code .w {
+  color: #bbbbbb;
+}
+.markdown pre > code .mf {
+  color: #6000E0;
+  font-weight: bold;
+}
+.markdown pre > code .mh {
+  color: #005080;
+  font-weight: bold;
+}
+.markdown pre > code .mi {
+  color: #0000D0;
+  font-weight: bold;
+}
+.markdown pre > code .mo {
+  color: #4000E0;
+  font-weight: bold;
+}
+.markdown pre > code .sb {
+  background-color: #fff0f0;
+}
+.markdown pre > code .sc {
+  color: #0040d0;
+}
+.markdown pre > code .sd {
+  color: #d04020;
+}
+.markdown pre > code .s2 {
+  background-color: #fff0f0;
+}
+.markdown pre > code .se {
+  color: #606060;
+  font-weight: bold;
+  background-color: #fff0f0;
+}
+.markdown pre > code .sh {
+  background-color: #fff0f0;
+}
+.markdown pre > code .si {
+  background-color: #e0e0e0;
+}
+.markdown pre > code .sx {
+  color: #D02000;
+  background-color: #fff0f0;
+}
+.markdown pre > code .sr {
+  color: #000000;
+  background-color: #fff0ff;
+}
+.markdown pre > code .s1 {
+  background-color: #fff0f0;
+}
+.markdown pre > code .ss {
+  color: #a06000;
+}
+.markdown pre > code .bp {
+  color: #007020;
+}
+.markdown pre > code .vc {
+  color: #306090;
+}
+.markdown pre > code .vg {
+  color: #d07000;
+  font-weight: bold;
+}
+.markdown pre > code .vi {
+  color: #3030b0;
+}
+.markdown pre > code .il {
+  color: #0000D0;
+  font-weight: bold;
 }
 html {
   font-size: 100%;
