--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,6 +2,7 @@
 layout: base
 title: Attila Oláh
 ---
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <ul class="wrap home">
   {% for page in paginator.posts %}
   <li>
