add cover photo

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -55,19 +55,8 @@
 </head>
 <body class="roboto">
   <header>
+    <div class="cover"></div>
     <div class="wrap">
-      <div class="flower">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
       <div class="content" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
         <div class="avatar"></div>
         <h2><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><span itemprop="givenName">Attila</span> <span itemprop="familyName">Ol&aacute;h</span></span></a></h2>
