--- a/css/generic.less
+++ b/css/generic.less
@@ -36,6 +36,7 @@
 /* Enforce maximum page width */
 .wrap {
   max-width: 56rem;
+  min-width: 20rem;
   margin: 0 auto;
 }
 /* Centre-align content */
