update city & country

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -63,12 +63,12 @@
         <h3>Full-time dad, part-time web developer.</h3>
         <h3 class="live">Lives in
           <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/PostalAddress">
-            <a href="https://en.wikipedia.org/wiki/Bajmok" itemprop="addressLocality">Bajmok</a>,
-            <a href="https://en.wikipedia.org/wiki/Serbia" itemprop="addressCountry">Serbia</a>.
+            <a href="https://en.wikipedia.org/wiki/Chiang_Mai" itemprop="addressLocality">Chiang Mai</a>,
+            <a href="https://en.wikipedia.org/wiki/Thailand" itemprop="addressCountry">Thailand</a>.
             <meta itemprop="email" content="attilaolah@gmail.com">
             <meta itemprop="telephone" content="+381612539794">
-            <meta itemprop="streetAddress" content="JNA 74">
-            <meta itemprop="postalCode" content="24210">
+            <meta itemprop="streetAddress" content="36 Morakot Rd">
+            <meta itemprop="postalCode" content="50300">
           </span>
         </h3>
         <h3 class="work">Works at
