fix list margin

--- a/css/post.less
+++ b/css/post.less
@@ -20,6 +20,9 @@ article {
       }
     }
   }
+  ul {
+    margin: 1rem 0;
+  }
   img:not([class^=icon]) {
     max-width: 100%;
     display: block;
