--- a/css/main.css
+++ b/css/main.css
@@ -752,6 +752,9 @@ article h1 a[rel=source]:focus,
 article h1 a[rel=source]:active {
   color: inherit;
 }
+article ul {
+  margin: 1rem 0;
+}
 article img:not([class^=icon]) {
   max-width: 100%;
   display: block;
