--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@
 }
 .markdown code {
   white-space: nowrap;
-  padding: .0625rem .3125rem;
+  padding: .125rem .25rem 0;
 }
 .markdown pre,
 .markdown code {
