--- a/css/markdown.less
+++ b/css/markdown.less
@@ -17,7 +17,7 @@
   }
   code {
     white-space: nowrap;
-    padding: .0625rem .3125rem;
+    padding: .125rem .25rem 0;
   }
   pre, code {
     background: #eee;
