--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-gb" itemscope itemtype="http://www.schema.org/Blog" prefix="og: http://ogp.me/ns#">
+<html lang="en-gb" itemscope itemtype="http://schema.org/Blog" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.min.css">
   <link rel="icon" type="image/jpeg" href="/avatar/192.jpg">
   <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml">
   <link rel="alternate" type="application/atom+xml" title="Atom feed" href="/atom.xml">
