--- a/css/common.less
+++ b/css/common.less
@@ -44,15 +44,16 @@ div[role=main] {
   min-height: 16rem;
 }
 .body-bg() {
-  background: #fdfdfd url(http://aiur.co.rs/img/brillant.png) 0 0 repeat;
+  background: #fdfdfd url(/images/w/bg.png) 0 0 repeat;
 }
 body,
-body > footer,
 div[role=main] {
   .body-bg;
 }
 body > footer {
   color: #999;
+  background: #fdfdfd url(/images/w/footer.png) 0 0 repeat;
   text-align: center;
   padding: 2.5rem 0 2rem;
+  margin-top: 2rem;
 }
