add social icons

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -82,6 +82,28 @@
         </h3>
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Hungary">
       </div>
+      <a class="flair condensed thin" href="//stackexchange.com/users/91952/attila-o">
+        Stack Exchange
+        <img alt="profile" src="http://stackexchange.com/users/flair/91952.png?theme=clean">
+      </a>
+      <ul class="social">
+        <li class="twitter"><a href="//twitter.com/attilaolah"></a></li>
+        <li class="facebook"><a href="//facebook.com/attilaolah"></a></li>
+        <li class="linkedin"><a href="//www.linkedin.com/in/attilaolah"></a></li>
+        <li class="github"><a href="//github.com/attilaolah"></a></li>
+        <li class="pinterest"><a href="//pinterest.com/attilaolah"></a></li>
+        <li class="google"><a href="//google.com/+AttilaOl&aacute;h42"></a></li>
+        <li class="lastfm"><a href="//last.fm/user/attilaolah"></a></li>
+        <li class="stackoverflow"><a href="//stackoverflow.com/users/252239/attila-o"></a></li>
+        <li class="xing"><a href="//xing.com/profiles/Attila_Olah3"></a></li>
+        <li class="youtube"><a href="//youtube.com/user/attilaschannel"></a></li>
+        <li class="flickr"><a href="//flickr.com/aatiis"></a></li>
+        <li class="blogger"><a href="//blogger.com/profile/08249296586836113208"></a></li>
+      </ul>
+      <ul class="social">
+        <li class="foursquare"><a href="//foursquare.com/attilaolah"></a></li>
+        <li class="reddit"><a href="//reddit.com/user/aatiis"></a></li>
+      </ul>
     </div>
   </header>
   <div role="main">
