--- a/css/header.less
+++ b/css/header.less
@@ -72,14 +72,6 @@ body > header {
       padding: 0; margin: 0;
       white-space: nowrap;
       z-index: 9;
-      + .social {
-        bottom: -28px; right: -26px;
-        width: 0;
-        li {
-          height: 20px;
-          width: 20px;
-        }
-      }
       li {
         display: inline-block;
         height: 24px;
@@ -93,28 +85,28 @@ body > header {
         }
         background-repeat: no-repeat;
         background-position: 50% 50%;
-        &.google {
+        /*&.google {
           background-image: url(/images/w/google-plus-2-48.png);
         }
         &.facebook {
           background-image: url(/images/w/facebook-2-48.png);
-        }
+        }*/
         &.twitter {
           background-image: url(/images/w/twitter-2-48.png);
         }
-        &.pinterest {
+        /*&.pinterest {
           background-image: url(/images/w/pinterest-2-48.png);
-        }
+        }*/
         &.github {
           background-image: url(/images/w/github-7-48.png);
         }
-        &.foursquare {
+        /*&.foursquare {
           background-image: url(/images/w/foursquare-48.png);
-        }
+        }*/
         &.linkedin {
           background-image: url(/images/w/linkedin-2-48.png);
         }
-        &.youtube {
+        /*&.youtube {
           background-image: url(/images/w/youtube-2-48.png);
         }
         &.lastfm {
@@ -134,7 +126,7 @@ body > header {
         }
         &.reddit {
           background-image: url(/images/w/reddit-48.png);
-        }
+        }*/
         background-size: cover;
       }
     }
