--- a/src/less/common.less
+++ b/src/less/common.less
@@ -43,16 +43,9 @@ div[role=main] {
 div[role=main] {
   min-height: 16rem;
 }
-.body-bg() {
-  background: #fdfdfd url(/images/w/bg.png) 0 0 repeat;
-}
-body,
-div[role=main] {
-  .body-bg;
-}
 body > footer {
   color: #999;
-  background: #fdfdfd url(/images/w/footer.png) 0 0 repeat;
+  background: #111;
   text-align: center;
   padding: 2.5rem 0 2rem;
   margin-top: 2rem;
