--- a/src/less/generic.less
+++ b/src/less/generic.less
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic|Roboto+Condensed:400,300|Droid+Serif:400italic&subset=latin,latin-ext);
-
 /* Fonts */
 .roboto {
   font-family: 'Roboto', sans-serif;
@@ -56,4 +54,8 @@
   .wide {
     display: none;
   }
+}
+
+.meta {
+  display: none;
 }
