--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,6 @@
 ---
 layout: base
 ---
-{% if page.mathjax %}
-  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-{% endif %}
-<article class="wrap post"{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
+<article class="wrap post{% if page.mathjax %} mathjax{% endif %}"{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
   {% include post.html %}
 </article>
