update cover height, hide second tagline on narrow screens

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -49,7 +49,7 @@
         <div class="avatar"></div>
         <h2><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><strong itemprop="givenName">Attila</strong> <span itemprop="familyName">Ol&aacute;h</span></span></a></h2>
         <h3 class="condensed thin"><strong>Full-time dad</strong>, part-time web developer.</h3>
-        <h3 class="condensed thin" itemprop="affiliation">Technical Interviewer at oDesk.</h3>
+        <h3 class="condensed thin wide" itemprop="affiliation">Technical Interviewer at oDesk.</h3>
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Serbia">
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Hungary">
       </div>
