--- a/_layouts/rss.html
+++ b/_layouts/rss.html
@@ -13,7 +13,7 @@
       <title>{{ post.title }}</title>
       <link>http://attilaolah.eu{{ post.url }}</link>
       <pubDate>{{ post.date | date: "%a, %d %b %Y %H:%M:%S %z" }}</pubDate>
-      <author>Attila Oláh</author>
+      <author>attila@attilaolah.eu</author>
       <guid>http://attilaolah.eu{{ post.id }}</guid>
       <description>{{ post.content | xml_escape }}</description>
     </item>
